# online_kinetics

./: .gitignore  README.md  README_recording.md  _task_stuff.md  analyze_recorded_data.py  environment.yaml  pyproject.toml  requirements.txt  setup.py
celerity/: api.py  callbacks.py  dataloader.py  featurizer.py  layers.py  models.py  optimizers.py  utils.py
celerity/datasets/: dataloader.py  datasets.py
examples/: train_model_example.py
notebooks/: config.yaml
notebooks/alanine_dipeptide/: hedgevampnets.ipynb  vampnets.ipynb
notes/: README_hedge_optimizer_tests.md  REFACTORING_SUMMARY.md
scripts/: example_hedge_vampnet_recording.py  visualize_recorded_data.py
tests/: test_api.py  test_hedge_optimizer.py  test_integration.py  test_layers.py  test_models.py
