[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celerity"
version = "0.1"
description = "Creates deep MSMs using accelerated training methods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "addict==2.4.0",
    "click==8.1.6",
    "deeptime==0.4.4",
    "h5py==3.9.0",
    "mdshare==0.4.2",
    "mdtraj==1.9.9",
    "numpy==1.25.2",
    "pydash==7.0.6",
    "pytest==7.4.0",
    "setuptools==68.0.0",
    "tg.devtools==2.4.3",
    "torch==2.0.1",
    "tqdm==4.65.0",
    "jupyterlab",
    "rich",
]

[project.scripts]
celerity = "celerity.api:cli"

[tool.setuptools]
packages = ["celerity"]
